--- a/posts/Example_assignment/index.qmd
+++ b/posts/Example_assignment/index.qmd
@@ -21,3 +21,4 @@ sirui.tan\@mail.utoronto.ca
 **Extracurricular Activities:** - *List any relevant extracurricular activities or achievements here, such as participation in math clubs, competitions, or relevant projects.*
 
 **References:** - *Available upon request.*
+![](painting-mountain-lake-with-mountain-background.jpg)
